# ai4i-core

./: .gitignore  AI4I_CORE_MICROSERVICES_INTEGRATION_EFFORTS.md  CONTAINER-PLATFORM-COMPARISON.md  CONTRIBUTING.md  DOCKER-ALTERNATIVE-QUICKSTART.md  Jenkinsfile  K8s-MIGRATION-GUIDE.md  KONG_DNS_FIX_SUMMARY.md  KONG_INTEGRATION_REVIEW.md  KONG_PORTABILITY_SOLUTION.md  MICROSERVICE_IMPLEMENTATION_PROMPT.md  Makefile  PIPELINE_SERVICE_IMPLEMENTATION.md  PIPELINE_UI_IMPLEMENTATION.md  PORTABLE_KONG_CONFIG.md  QUICKSTART.md  README.md  SERVICES_PORT_MAPPING.md  SWARM-MIGRATION-GUIDE.md  TELEMETRY_IMPLEMENTATION_SUMMARY.md  architecture-diagram.md  convert_to_docx.py  docker-compose-local.yml  docker-compose-simple.yml  docker-compose.kong.yml  docker-compose.override.yml  docker-compose.yml  docker-compose_bkup23122025wq.yml  docker_install.sh  env-bkp-091225  env.example  env.template  feasibility-assessments.csv  feasibility-column-data-product-friendly.md  feasibility-column-data.md  fix-dockerfiles.sh  kong-redis-diagnostic.sh  metrics-feasibility-analysis.md  nginx-tts-proxy.conf  package-lock.json  (+8 more)
AI4inclusion/: .dockerignore
AI4inclusion/k8s-manifests/: DEPLOYMENT_SUMMARY.md  QUICK_DEPLOYMENT_GUIDE.md  README.md  REORGANIZED_STRUCTURE.md  STEP_BY_STEP_DEPLOYMENT.md  aws-ebs-immediate-fixed.yaml  cleanup.sh  deploy.sh  storage-class-gp2.yaml  storage-class-immediate.yaml  storage-class-standard.yaml
AI4inclusion/k8s-manifests-models/: README.md  deploy.sh
Development/: HOT_RELOAD_DEVELOPMENT.md  docker-compose-development.yml
deploy/: Jenkinsfile
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  DEPLOYMENT.md  HOT_RELOAD_DEVELOPMENT.md  KEYNAME_LASTUSED_ANALYSIS.md  MODEL_MANAGEMENT_INTEGRATION_GUIDE.md  MULTI_TENANT_SERVICE_REGISTRATION.md  OBSERVABILITY_DHRUVA_OVERVIEW.md  OBSERVABILITY_INTEGRATION_GUIDE.md  PRINT_INSTRUCTIONS.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  TTS_FLOW_EXPLANATION.md  casbin-rbac-print.html  casbin-rbac.html  casbin-rbac.md  kong-openapi.json  temp_md.txt
frontend/simple-ui/: .gitignore  Dockerfile  Dockerfile.dev  README.md  TTS_UI_INTEGRATION_SUMMARY.md  entrypoint.dev.sh  env.template  jest.config.js  jest.setup.js  next.config.js  package-lock 2.json  package-lock.json  package.json  test-asr-stream.js
infrastructure/: patch_gateway_auth.py
infrastructure/alertmanager/: alertmanager.yml
infrastructure/databases/: ADDING_NEW_DATABASE.md  DEPLOYMENT_GUIDE.md  FAQ.md  QUICKSTART.md  README.md  __init__.py  cli.py  config.py  deploy-migrations.sh  requirements.txt  triton_endpoints.py
infrastructure/elasticsearch/: init-elasticsearch.sh
infrastructure/fluent-bit/: extract_context.lua  fluent-bit.conf  parsers.conf
infrastructure/health-checks/: elasticsearch-health.sh  influxdb-health.sh  kafka-health.sh  postgres-health.sh  redis-health.sh  vault-health.sh
infrastructure/influxdb/: init-influxdb.sh
infrastructure/kafka/: init-kafka.sh
infrastructure/migrations/: DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_MIGRATIONS_SUMMARY.md  QUICKSTART.md  README.md  cli.py  config.py
infrastructure/nginx/: core-v1.ai4inclusion.org.conf
infrastructure/opensearch/: QUICK_TEST.sh  RBAC_SETUP_GUIDE.md  TEST_RBAC.md  create-index-patterns.sh  enable-rbac-local.sh  generate-demo-certs.sh  index-template.json  init-opensearch.sh  opensearch.yml  setup-rbac.sh
infrastructure/postgres/: 01-auth-schema-update.sql  01-auth-schema.sql  01-konga-postgres12-compat.sql  02-config-schema-migration.sql  02-config-schema.sql  03-metrics-schema.sql  04-telemetry-schema.sql  05-alerting-schema.sql  06-dashboard-schema.sql  07-seed-data.sql  08-ai-services-schema.sql  09-allow-null-passwords.sql  09-transliteration-service-seed.sql  (+47 more)
k8's_manifest/: .gitkeep
k8s/: mcp-server-canary.yaml  mcp-server-traffic-splitting.yaml
libs/ai4i_observability/: README.md  pyproject.toml
libs/ai4i_observability/ai4i_observability/: __init__.py  config.py  metrics.py  middleware.py  tenant.py
libs/ai4i_observability/tests/: __init__.py
libs/ai4icore_auth/: pyproject.toml
libs/ai4icore_auth/ai4icore_auth/: __init__.py  auth_provider.py  config.py  exceptions.py  utils.py  validators.py
libs/ai4icore_db/: README.md  pyproject.toml
libs/ai4icore_db/ai4icore_db/: __init__.py  connection_manager.py  session_factory.py
libs/ai4icore_logging/: README.md  pyproject.toml  test_middleware.py
libs/ai4icore_logging/ai4icore_logging/: __init__.py  context.py  formatters.py  handlers.py  logger.py  middleware.py
libs/ai4icore_model_management/: README.md  SUMMARY.md  pyproject.toml
libs/ai4icore_model_management/ai4icore_model_management/: __init__.py  auth_context_middleware.py  auth_utils.py  client.py  config.py  middleware.py  plugin.py  triton_client.py
libs/ai4icore_model_management/tests/: __init__.py  test_middleware_unpublished.py
libs/ai4icore_observability/: pyproject.toml
libs/ai4icore_observability/ai4icore_observability/: metrics.py  middleware.py  plugin.py
libs/ai4icore_telemetry/: README.md  pyproject.toml
libs/ai4icore_telemetry/ai4icore_telemetry/: __init__.py  ip_capture.py  ip_middleware.py  jaeger_client.py  opensearch_client.py  rbac_helper.py  tracing.py
libs/dhruva_observability/: README.md  pyproject.toml
libs/dhruva_observability/dhruva_observability/: __init__.py  dashboards.py  plugin.py
scripts/: README.md  TTS_TESTING_GUIDE.md  configure-jaeger-url-final.sh  configure-opensearch-url-field.sh  diagnose-ocr-logs.sh  docker-manager.sh  docker-quick.sh  fix-jaeger-url-link.sh  fix-opensearch-mapping.sh  generate-kong-openapi.sh  health-check-all.sh  init-infrastructure.sh  install_test_dependencies.sh  logs.sh  quick-alert-check.ps1  refresh-opensearch-fields.sh  resolve_port_8094.sh  restart-service.sh  run-tests.sh  start-all.sh  stop-all.sh  test_nmt_service.sh  test_policy_engine.sh  test_tts_service.sh  update_service_id.py  update_service_id.sql
smr-web/: README.md  START.sh  index.html  server.py
specs/: README.md  openapi.json
tests/: conftest.py  pytest.ini  requirements.txt
(+1306 files in other folders)
