[project]
name = "ai4i-observability"
version = "0.1.0"
description = "Shared observability package for AI4I microservices - metrics, middleware, and tenant resolution"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AI4I Core Team"}
]
keywords = ["observability", "metrics", "prometheus", "fastapi", "microservices"]

dependencies = [
    "fastapi>=0.104.0",
    "prometheus-client>=0.19.0",
    "starlette>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ai4i_observability"]

[tool.black]
line-length = 100
target-version = ['py311']

