[project]
name = "ai4icore-db"
version = "1.0.0"
description = "AI4ICore Database Library - shared database connection management and session factory for AI4ICore microservices"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AI4X Team"},
    {email = "team@ai4x.com"}
]
keywords = ["database", "sqlalchemy", "asyncpg", "postgresql", "fastapi", "ai4icore"]
dependencies = [
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ai4icore_db"]

[tool.black]
line-length = 100
target-version = ['py311']

