[project]
name = "ai4icore-logging"
version = "1.0.0"
description = "AI4ICore Logging Library - Structured JSON logging with trace correlation for AI4ICore services"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AI4X Team"},
    {email = "team@ai4x.com"}
]
keywords = ["logging", "json", "structured-logging", "trace-id", "correlation", "fastapi", "ai4icore"]
dependencies = [
    "python-json-logger>=2.0.7",
    "kafka-python>=2.0.2",
    "aiokafka>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ai4icore_logging"]

[tool.black]
line-length = 100
target-version = ['py311']

