[project]
name = "ai4icore-model-management"
version = "1.0.0"
description = "AI4ICore Model Management Plugin - reusable model management integration with caching for AI4ICore services"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AI4X Team"},
    {email = "team@ai4x.com"}
]
keywords = ["model-management", "triton", "caching", "fastapi", "enterprise", "ai4icore"]
dependencies = [
    "fastapi>=0.104.0",
    "starlette>=0.27.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "tritonclient[http]>=2.40.0",
    "numpy>=1.24.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ai4icore_model_management"]

[tool.black]
line-length = 100
target-version = ['py311']

