[project]
name = "ai4icore-observability"
version = "1.0.9"
description = "AI4ICore Observability Plugin - enterprise-grade observability features for AI4ICore services"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AI4X Team"},
    {email = "team@ai4x.com"}
]
keywords = ["observability", "metrics", "prometheus", "fastapi", "enterprise", "ai4icore"]
dependencies = [
    "fastapi>=0.104.0",
    "prometheus-client>=0.19.0",
    "starlette>=0.27.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "PyJWT>=2.8.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ai4icore_observability"]

[tool.black]
line-length = 100
target-version = ['py311']

