[project]
name = "ai4icore-telemetry"
version = "1.0.0"
description = "AI4ICore Telemetry Library - Distributed tracing and log aggregation for AI4ICore services"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AI4X Team"},
    {email = "team@ai4x.com"}
]
keywords = ["telemetry", "tracing", "opentelemetry", "jaeger", "opensearch", "fastapi", "ai4icore"]
dependencies = [
    "packaging>=21.0",  # Required by opentelemetry-instrumentation
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "elasticsearch>=8.10.0",  # Compatible with OpenSearch
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ai4icore_telemetry"]

[tool.black]
line-length = 100
target-version = ['py311']
